--- a/src/public/form.ejs
+++ b/src/public/form.ejs
@@ -1,47 +1,69 @@
 <% include partes/_header %>
-    <br>
+    
+<br>
+<center>
+    <form action="/Nota" method="get">
+        <button type="submit" class="btn btn-primary">
+            postular
+        </button>
+    </form>
+</center>
+
+        <br>
+        <div class="container">
+            <div class="row mt-5">
+                <div class="col-md-7">
+                    <table class="table table-bordered table-hover">
+                        <thead>
+                            <tr>
+                                <th>N°</th>
+                                <th>Nombres y Apellidos</th>
+                                <th>N° Identificacion</th>
+                                <th>Tipo</th>                                                                        
+                                <th>Fecha de Nacimiento</th>
+                                <th>Edad</th>
+                                <th>Sexo</th>
+                                <th>Persona de Contacto</th>
+                            </tr>
+                        </thead>
+                        <tbody>                           
+                            <% for(var i=0; i< tasks.length; i++) { %>
+                                <tr>
+                                    <td><%= i + 1 %></td>
+                                    <td><%= tasks[i].applicant_person %></td>                                        
+                                    <td><%= tasks[i].identification_number %></td>
+                                    <td><%= tasks[i].identification_type %></td>
+                                    <td><%= tasks[i].fecha %></td>                                        
+                                    <td><%= tasks[i].age %></td>
+                                    <td><%= tasks[i].sex %></td>                                          
+                                    <td><%= tasks[i].reference_person %></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>                                    
+                            <% } %>
+                    </tbody>
+                </table>
+                </div>
+            </div>
+        </div> 
+
+        <br>
+
+        
+<% include partes/_final %>
+<!--<br>
     <center>
         <form action="/registrar" method="get">
             <button type="submit" class="btn btn-primary">
                 REGISTRAR
             </button>
         </form>
-    </center>
-        <br>
-        <div class="container">
-            <div class="row mt-5">
-                <div class="col-md-7">
-                    <h2>    List the Documents</h2>
+    </center>-->
+
+<!--*/
+<a href="/promedio" class="btn btn-primary">promedio</a>
+                    <a href="/porcentaje" class="btn btn-primary">porcentaje</a>
+    <h2>    List the Documents</h2>
                         <br>
-                        <table class="table table-bordered table-hover">
-                            <thead>
-                                <tr>
-                                    <th>N°</th>
-                                    <th>Nombres y Apellidos</th>
-                                    <th>N° Identificacion</th>
-                                    <th>Tipo</th>                                                                        
-                                    <th>Fecha de Nacimiento</th>
-                                    <th>Edad</th>
-                                    <th>Sexo</th>
-                                    <th>Persona de Contacto</th>
-                                </tr>
-                            </thead>
-                            <tbody>                           
-                                <% for(var i=0; i< tasks.length; i++) { %>
-                                    <tr>
-                                        <td><%= i + 1 %></td>
-                                        <td><%= tasks[i].applicant_person %></td>                                        
-                                        <td><%= tasks[i].identification_number %></td>
-                                        <td><%= tasks[i].identification_type %></td>
-                                        <td><%= tasks[i].fecha %></td>                                        
-                                        <td><%= tasks[i].age %></td>
-                                        <td><%= tasks[i].sex %></td>                                          
-                                        <td><%= tasks[i].reference_person %></td>
-                                    </tr>                                    
-                                <% } %>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div> 
-<% include partes/_final %>
+                        
+/*-->
