--- a/src/public/partes/_header.ejs
+++ b/src/public/partes/_header.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>REGISTRO DOCUMENTO</title>
+        <title>Venta Productos</title>
         <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
                 
         <style>
@@ -21,6 +21,6 @@
                 
         <nav class="navbar navbar-dark bg-dark">
             <a href="/" class="navbar-brand">
-                Registro
+                CALCULO DE NOTAS
             </a>
         </nav>
